Adding tests for --file

--- a/test/gold/tools/getReceipts/cmd_file.3
+++ b/test/gold/tools/getReceipts/cmd_file.3
@@ -1,2 +1,2 @@
 # Example 3, mixed single command with identifier
---verbose --fmt json --output /tmp/out.json 15644881
+--verbose --fmt json --output out.json 5644882.0
