--- a/test/gold/tools/getReceipts/cmd_file.6
+++ b/test/gold/tools/getReceipts/cmd_file.6
@@ -1,7 +1,7 @@
 # Example 6, mixed multiple commands and identifiers
---verbose --fmt json --output /tmp/out.json
---fmt csv --output /tmp/out.csv
---verbose --fmt tsv --output /tmp/out.tsv
+--verbose --fmt json --output out.json
+--fmt csv --output out.csv
+--verbose --fmt tsv --output out.tsv
 15644883
 15644882
 15644881
