--- a/test/gold/tools/getReceipts/cmd_file.7
+++ b/test/gold/tools/getReceipts/cmd_file.7
@@ -1,5 +1,5 @@
 # Example 7, mixed with identifiers on the same line
---verbose --fmt json --output /tmp/out.json
---fmt csv --output /tmp/out.csv
---verbose --fmt tsv --output /tmp/out.tsv
+--verbose --fmt json --output out.json
+--fmt csv --output out.csv
+--verbose --fmt tsv --output out.tsv
 15644883 15644882 15644881
