--- a/test/gold/tools/getReceipts/cmd_file.8
+++ b/test/gold/tools/getReceipts/cmd_file.8
@@ -1,6 +1,6 @@
 # Example 8, mixed with identifiers and commands on the same line
---verbose --fmt json --output /tmp/out.json 15644883
---fmt csv --output /tmp/out.csv
---verbose --fmt tsv --output /tmp/out.tsv
+--verbose --fmt json --output out.json 15644883
+--fmt csv --output out.csv
+--verbose --fmt tsv --output out.tsv
 15644882
 15644881
