--- a/test/gold/tools/getReceipts/cmd_file.4
+++ b/test/gold/tools/getReceipts/cmd_file.4
@@ -1,4 +1,4 @@
 # Example 4, multiple commands only
---verbose --fmt json --output /tmp/out.json
---fmt csv --output /tmp/out.csv
---verbose --fmt tsv --output /tmp/out.tsv
+--verbose --fmt json --output out.json
+--fmt csv --output out.csv
+--verbose --fmt tsv --output out.tsv
