--- a/test/gold/tools/getReceipts/cmd_file.6
+++ b/test/gold/tools/getReceipts/cmd_file.6
@@ -1,7 +1,7 @@
 # Example 6, mixed multiple commands and identifiers
---verbose --fmt json --output out.json
---fmt csv --output out.csv
---verbose --fmt tsv --output out.tsv
-15644883
-15644882
-15644881
+--verbose --fmt json
+--fmt csv
+--verbose --fmt tsv
+5644882.0
+5644883.0
+5644886.0
