--- a/test/gold/tools/getReceipts/cmd_file.7
+++ b/test/gold/tools/getReceipts/cmd_file.7
@@ -2,6 +2,6 @@
 # --verbose --fmt json --output out.json
 --fmt json
 --fmt csv --output out.csv
-# --verbose --fmt tsv --output out.tsv
+--verbose --fmt tsv --output out.tsv
 --fmt tsv
 5644882.0 5644884.0 5644885.0
