--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -45,7 +45,7 @@ cmake ../src
 make -j
 ----
 . Add the `./bin` and `./bin/tests` folders to your PATH
-. If needed, add keys for RPC and EtherScan (for `chifra slurp`). In `$CONFIG/trueBlocks.toml`, add these lines. $CONFIG is different depending on your OS. Be sure they're under `[settings]`:
+. If needed, add keys for RPC and Etherscan (for `chifra slurp`). In `$CONFIG/trueBlocks.toml`, add these lines. $CONFIG is different depending on your OS. Be sure they're under `[settings]`:
 +
 [toml]
 ----
