--- a/src/other/cache_perf/test_cache.1
+++ b/src/other/cache_perf/test_cache.1
@@ -6,18 +6,27 @@ shift
 IDS=$1
 shift
 
-echo "---> Running $CMD $IDS $@" >&2
+NAME=`echo $@ | sed 's/-//g' | sed 's/ /_/g'`
+
+echo "---> Running Name: $NAME Cmd: $CMD $IDS $@" >&2
 
 export TB_TIMER_ON=true
 echo "INFO ================================================================================"
 echo "INFO $CMD $IDS $@"
+
+# Do not edit to make the path a variable - dangerous
 rm -fR ~/Data/trueblocks/v0.70.0/cache/mainnet && \
    chifra $CMD $IDS $@ --cache --fmt json >one/$CMD && \
    cat one/$CMD | grep INFO && \
    chifra $CMD $IDS $@ --fmt json >two/$CMD && \
    cat two/$CMD | grep INFO && \
    sleep 1 && \
-   export TB_TIMER_ON=false && \
-   chifra $CMD $IDS --decache  && \
+   export TB_TIMER_ON=false
+
+CNT=`find ~/Data/trueblocks/v0.70.0/cache/mainnet -type f | wc -l`
+
+chifra $CMD $IDS --decache  && \
    diff one/$CMD two/$CMD
+
+echo $CNT | sed 's/^.* //' | sed 's/^/INFO nItems in cache: /'
 echo "--------------------------------------------------------------------------------"
